--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 			<scope>test</scope>
 		</dependency>
 
+        <!--Logging-->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
